Adds list and dashboard pages
Implements list and dashboard pages.
Also, this commit:
- Adds chart.js and react-chartjs-2 dependencies.
- Renames font files.
- Prevents right click, drag, copy, and drag start.

--- a/src/styles/font.css
+++ b/src/styles/font.css
@@ -4,10 +4,8 @@
   font-display: swap;
   src:
     local("Pretendard GOV Black"),
-    url(")
-      format("woff2"),
-    url(../../../packages/pretendard-gov/dist/web/static/woff/PretendardGOV-Black.woff)
-      format("woff");
+    url(../assets/Pretendard_GOV/PretendardGOV-Black.woff2) format("woff2"),
+    url(../assets/Pretendard_GOV/PretendardGOV-Black.woff) format("woff");
 }
 
 @font-face {
@@ -16,10 +14,8 @@
   font-display: swap;
   src:
     local("Pretendard GOV ExtraBold"),
-    url(../../../packages/pretendard-gov/dist/web/static/woff2/PretendardGOV-ExtraBold.woff2)
-      format("woff2"),
-    url(../../../packages/pretendard-gov/dist/web/static/woff/PretendardGOV-ExtraBold.woff)
-      format("woff");
+    url(../assets/Pretendard_GOV/PretendardGOV-ExtraBold.woff2) format("woff2"),
+    url(../assets/Pretendard_GOV/PretendardGOV-ExtraBold.woff) format("woff");
 }
 
 @font-face {
@@ -28,10 +24,8 @@
   font-display: swap;
   src:
     local("Pretendard GOV Bold"),
-    url(../../../packages/pretendard-gov/dist/web/static/woff2/PretendardGOV-Bold.woff2)
-      format("woff2"),
-    url(../../../packages/pretendard-gov/dist/web/static/woff/PretendardGOV-Bold.woff)
-      format("woff");
+    url(../assets/Pretendard_GOV/PretendardGOV-Bold.woff2) format("woff2"),
+    url(../assets/Pretendard_GOV/PretendardGOV-Bold.woff) format("woff");
 }
 
 @font-face {
@@ -40,10 +34,8 @@
   font-display: swap;
   src:
     local("Pretendard GOV SemiBold"),
-    url(../../../packages/pretendard-gov/dist/web/static/woff2/PretendardGOV-SemiBold.woff2)
-      format("woff2"),
-    url(../../../packages/pretendard-gov/dist/web/static/woff/PretendardGOV-SemiBold.woff)
-      format("woff");
+    url(../assets/Pretendard_GOV/PretendardGOV-SemiBold.woff2) format("woff2"),
+    url(../assets/Pretendard_GOV/PretendardGOV-SemiBold.woff) format("woff");
 }
 
 @font-face {
@@ -52,10 +44,8 @@
   font-display: swap;
   src:
     local("Pretendard GOV Medium"),
-    url(../../../packages/pretendard-gov/dist/web/static/woff2/PretendardGOV-Medium.woff2)
-      format("woff2"),
-    url(../../../packages/pretendard-gov/dist/web/static/woff/PretendardGOV-Medium.woff)
-      format("woff");
+    url(../assets/Pretendard_GOV/PretendardGOV-Medium.woff2) format("woff2"),
+    url(../assets/Pretendard_GOV/PretendardGOV-Medium.woff) format("woff");
 }
 
 @font-face {
@@ -64,10 +54,8 @@
   font-display: swap;
   src:
     local("Pretendard GOV Regular"),
-    url(../../../packages/pretendard-gov/dist/web/static/woff2/PretendardGOV-Regular.woff2)
-      format("woff2"),
-    url(../../../packages/pretendard-gov/dist/web/static/woff/PretendardGOV-Regular.woff)
-      format("woff");
+    url(../assets/Pretendard_GOV/PretendardGOV-Regular.woff2) format("woff2"),
+    url(../assets/Pretendard_GOV/PretendardGOV-Regular.woff) format("woff");
 }
 
 @font-face {
@@ -76,10 +64,8 @@
   font-display: swap;
   src:
     local("Pretendard GOV Light"),
-    url(../../../packages/pretendard-gov/dist/web/static/woff2/PretendardGOV-Light.woff2)
-      format("woff2"),
-    url(../../../packages/pretendard-gov/dist/web/static/woff/PretendardGOV-Light.woff)
-      format("woff");
+    url(../assets/Pretendard_GOV/PretendardGOV-Light.woff2) format("woff2"),
+    url(../assets/Pretendard_GOV/PretendardGOV-Light.woff) format("woff");
 }
 
 @font-face {
@@ -88,10 +74,8 @@
   font-display: swap;
   src:
     local("Pretendard GOV ExtraLight"),
-    url(../../../packages/pretendard-gov/dist/web/static/woff2/PretendardGOV-ExtraLight.woff2)
-      format("woff2"),
-    url(../../../packages/pretendard-gov/dist/web/static/woff/PretendardGOV-ExtraLight.woff)
-      format("woff");
+    url(../assets/Pretendard_GOV/PretendardGOV-ExtraLight.woff2) format("woff2"),
+    url(../assets/Pretendard_GOV/PretendardGOV-ExtraLight.woff) format("woff");
 }
 
 @font-face {
@@ -100,8 +84,6 @@
   font-display: swap;
   src:
     local("Pretendard GOV Thin"),
-    url(../../../packages/pretendard-gov/dist/web/static/woff2/PretendardGOV-Thin.woff2)
-      format("woff2"),
-    url(../../../packages/pretendard-gov/dist/web/static/woff/PretendardGOV-Thin.woff)
-      format("woff");
+    url(../assets/Pretendard_GOV/PretendardGOV-Thin.woff2) format("woff2"),
+    url(../assets/Pretendard_GOV/PretendardGOV-Thin.woff) format("woff");
 }
